# KingBot

./: .gitignore  Cargo.toml  Kingbot.sln  README.md  apiClient.js  botClient.js  king.js  sqlx-data.json
.github/workflows/: build.yml  release.yml
JSON/: timerWords.json
Kingbot/: Kingbot.csproj  Model.cs  Program.cs  TwitchBot.cs  info-sample.json
Kingbot/Data/: Quote.cs
Kingbot/Handlers/: CommandHandler.cs
Kingbot/Handlers/Commands/: CommandHandler.cs
Kingbot/Helpers/: CredentialsHelper.cs  DataHelper.cs
Kingbot/Helpers/API/: ApiHelper.cs  ChannelProvider.cs
Kingbot/Helpers/Data/: DataCommands.cs  DataHelper.cs  DataIntervals.cs  DataQuotes.cs  DatabaseHelper.cs  KingBotFactory.cs
Kingbot/Helpers/Security/: CredentialsHelper.cs
Kingbot/Migrations/: 20200321220510_InitialCreate.Designer.cs  20200321220510_InitialCreate.cs  20200321230016_AddLinq.Designer.cs  20200321230016_AddLinq.cs  20200322225120_AddDepInjection.Designer.cs  20200322225120_AddDepInjection.cs  20200323195103_AddInterface.Designer.cs  20200323195103_AddInterface.cs  KingBotContextModelSnapshot.cs
Kingbot/Modules/: Custom.cs  Interval.cs  Intervals.cs  Lurk.cs  Other.cs  Quotes.cs  quotes.cs
helpers/: chat.js
migrations/: 2020-08-11_18-15-51_channel_add.sql  2020-08-11_18-20-37_create_quotes.sql  2020-08-13_14-42-00_create_commands.sql  2020-09-30_16-49-44_create_intervals.sql  20200811182037_create_quotes.sql  20200813144200_create_commands.sql  20200927210530_create_messages.sql
samples/: info.json
src/: main.rs
src/api/: webhook_handler.rs
src/commands/: custom.rs  general.rs  lurk.rs  mod.rs  quotes.rs
src/handlers/: command_handler.rs
src/helpers/: command_utils.rs  credentials_helper.rs  database_helper.rs  mod.rs  string_renderer.rs
src/modules/: custom.rs  intervals.rs  lurks.rs  mod.rs  other.rs  quotes.rs
src/structures/: cmd_data.rs  mod.rs  webhooks.rs
src/webhooks/: rocket.rs
systemd/: twitch.service
