[package]
name = "kingbot"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
tokio  = { version = "0.2", features = ["rt-threaded", "macros", "time"] }
twitchchat = "0.11.8"
typemap_rev = "0.1.3"
dashmap = "4.0.0-rc6" 
futures = "0.3"
hook = { git = "https://github.com/acdenisSK/hook" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "offline"]