[package]
name = "kingbot"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "time", "sync"] } 
typemap_rev = "0.1.3"
dashmap = "4.0.0-rc6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hook = { git = "https://github.com/acdenisSK/hook" }
rand = "0.7.3"
reqwest = { version = "0.10.8", features = ["json"] }


[dependencies.twitchchat]
version = "0.14"
features = ["async", "tokio", "tokio-util"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "offline"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket/"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]
